# sphinx-syntax

./: README.md  pyproject.toml
docs/: api.html  autodoc.html  directives.html  example.html  genindex.html  index.html  quickstart.html  roles.html  search.html  settings.html  sphinx-a4doc.html
