[project]
name = "sphinx-syntax"
authors = [{name = "Tamika Nomara", email = "taminomara@gmail.com"}]
description = "A Sphinx plugin for documenting grammars"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Software Development :: Documentation",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Typing :: Typed",
]
dependencies = [
    "syntax-diagrams~=0.0.0.b2",
    "sphinx>=8.0,<9.0",
    "PyYAML~=6.0.2"
]

[project.optional-dependencies]
dev = [
    "pytest-cov==7.0.0",
    "sphinx-syntax[test,lint,doc]",
]
test = [
    "pyright==1.1.405",
    "pytest==8.4.2",
    "sybil==9.2.0",
    "pytest-regressions==2.8.1",
    "beautifulsoup4==4.13.4"
]
lint = [
    "black==25.9.0",
    "isort==6.0.1",
    "pre-commit==4.3.0",
]
doc = [
    "sybil==9.2.0",
    "furo==2025.7.19",
    "sphinx_design==0.6.1",
]

[project.urls]
Documentation = "https://sphinx-syntax.readthedocs.io/en/stable/"
Issues = "https://github.com/taminomara/sphinx-syntax/issues"
Source = "https://github.com/taminomara/sphinx-syntax/"
Changelog = "https://github.com/taminomara/sphinx-syntax/blob/main/CHANGELOG.md"


[build-system]
requires = ["setuptools>=60", "setuptools_scm[toml]>=8", "wheel>=0.40"]

[tool.setuptools_scm]
write_to = "sphinx_syntax/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--strict-markers", "-p no:doctest"]
testpaths = ["test", "sphinx_syntax", "docs"]

[tool.pyright]
include = ["sphinx_syntax"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "All"

# deprecateTypingAliases = true
reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryIsInstance = "none"

reportUnnecessaryTypeIgnoreComment = "warning"

[tool.black]
extend-exclude = '^/docs'

[tool.isort]
profile = "black"
extend_skip_glob = ["docs/*"]
skip_gitignore = true
